[package]
name = "little_pt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.24.1", features = ["serde"] }
image = "0.24.7"
obj = { version = "0.10.2", features = ["genmesh"] }
rayon = "1.7.0"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
clap = { version = "4.4.1", features = ["derive"] }
ddsfile = "0.5.1"
bytemuck = "1.13.1"
shared_exponent_formats = { git = "https://github.com/DGriffin91/shared_exponent_formats" }

# Enable optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
